--- a/main.css
+++ b/main.css
@@ -1,5 +1,24 @@
 body {
   font-family: 'Rubik One', sans-serif;
+  background-image: url('images/tatooine-back.jpg');
+  background-size: cover;
+  background-position: top;
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100vw;
+  text-align: center;
+}
+.container {
+  background-image: url('')
+}
+
+h1 {
+  font-size: 30px;
+  color: #000000;
+  margin-top: 20px;
+}
+h1 span{
+  font-family: 'Rubik Mono One', sans-serif;
 }
 
 
